--- a/conf/simulation/weak_wind.yaml
+++ b/conf/simulation/weak_wind.yaml
@@ -1,6 +1,7 @@
 _target_: simulation.simulation.Simulation
-gravity: 0.1
-wind_speed: [0, 0.5, 1]
-wind_constant: 0.05
-dampening: 0.1
+gravity: 1
+wind_speed: [0, -0.5, 1]
+wind_constant: 1
+dampening: 100
 epsilon: 1e-10
+speed: 1
